feat:la verification par id
