# src/routes/verify.routes.js
@@ -3,7 +3,9 @@ const router = express.Router();
 const verifyController = require('../controllers/verify.controller');
 
 // Route publique pour scanner un QR code
-// Optionnellement, on pourrait exiger une authentification pour les institutions (hôpitaux, tribunaux)
 router.post('/qr', verifyController.verifyQR);
+
+// Route publique pour vérifier via ID National manuel
+router.post('/id', verifyController.verifyId);
 
 module.exports = router;
